# gpyt-openai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  entrypoint.sh  noxfile.py  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
gpyt_openai/: settings.py
gpyt_openai/aggregate/template/: add_template.py  delete_template.py  template_root.py  update_template.py
gpyt_openai/injection/: injector.py
gpyt_openai/injection/modules/: app.py  loguru_logger.py  pydantic_loader.py  settings.py  template_aggregate_root.py
gpyt_openai/interface/: settings.py  template.py  template_aggregate_root.py
gpyt_openai/resources/create_template/: __init__.py  resource.py
gpyt_openai/resources/delete_template/: __init__.py  resource.py
gpyt_openai/resources/event/: resource.py
gpyt_openai/resources/root/: __init__.py  resource.py
gpyt_openai/resources/template/: __init__.py  resource.py
gpyt_openai/resources/template/event/: __init__.py  resource.py
gpyt_openai/resources/update_template/: __init__.py  resource.py
tests/unit/: test_init.py  test_settings.py  test_version.py
tests/unit/aggregate/template/: test_add_template.py
tests/unit/injection/: test_app.py  test_loguru_logger.py  test_pydantic_loader.py  test_settings.py
tests/unit/resources/: test_target.py
